--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -508,7 +508,7 @@
  IRQ_order_five: "Order Five"
  IRQ_order_five_desc: "By creating an effective, and official De-Ba'athification council, we will be able to coordinate our efforts more greatly and broadly."
  IRQ_order_seven: "Order Seven"
- IRQ_order_seven_desc: "We must find out who was truly affiliated with the Ba'athists, and who was not. Some were dragged into the whole mess involunterily, so investigations are needed."
+ IRQ_order_seven_desc: "We must find out who was truly affiliated with the Ba'athists, and who was not. Some were dragged into the whole mess involuntarily, so investigations are needed."
  IRQ_order_one_hundred: "Order One Hundred"
  IRQ_order_one_hundred_desc: "The time has come for a true transfer of power between the provisional authority into the hand of the Iraqi people."
  IRQ_the_land_of_shiism: "The Fortress of Revolution"
@@ -526,7 +526,7 @@
  IRQ_auctioning_oil: "Sustainable Extraction Facilities"
  IRQ_auctioning_oil_desc: "We have more than enough oil in Iraq, but we do not have enough tools to extract them with. We will bring in experts to create the necessary tools to extract our resources with."
  IRQ_invite_potus: "Invite the President"
- IRQ_invite_potus_desc: "The American president must be invited into our nation to show them that we pose no threat, and to demonstrate the security of the Iraqi state infront of the whole world."
+ IRQ_invite_potus_desc: "The American president must be invited into our nation to show them that we pose no threat, and to demonstrate the security of the Iraqi state in front of the whole world."
  IRQ_reverse_engineering_weapons: "Reverse Engineering Weapons"
  IRQ_reverse_engineering_weapons_desc: "The Americans left behind quite a bit of weapons, and we can snatch a couple of them to reverse engineer and use to produce our own variants..."
  IRQ_memories_of_fallujah: "Memories of Fallujah"
@@ -542,15 +542,15 @@
  IRQ_iranian_irgc_experts: "IRGC Experts"
  IRQ_iranian_irgc_experts_desc: "The IRGC is large enough and conditioned enough to give us some advice on how we could deal with the American threat at home."
  IRQ_status_quo_najaf: "Status Quo in Najaf"
- IRQ_status_quo_najaf_desc: "Najaf will be used as our base of operations to prepare and coordinate plans agains the American occupation forces."
+ IRQ_status_quo_najaf_desc: "Najaf will be used as our base of operations to prepare and coordinate planes against the American occupation forces."
  IRQ_iranian_quds_operations: "Quds Training"
- IRQ_iranian_quds_operations_desc: "The Quds forces from Iran's IRGC will be invited over to give our troops the necessary trainig to fight back against the American forces when needed."
+ IRQ_iranian_quds_operations_desc: "The Quds forces from Iran's IRGC will be invited over to give our troops the necessary training to fight back against the American forces when needed."
  IRQ_national_rallies: "National Rallies"
  IRQ_national_rallies_desc: "The masses must rise up against the Americans, we will coordinate popular rallies to show the unpopularity of the occupation forces."
  IRQ_sunni_leadership: "Sunni Leadership"
  IRQ_sunni_leadership_desc: "By promoting Sunni leadership in aspects of society, we can show to the world that we do not entertain the idea of sectarianism."
  IRQ_sunni_representation: "Sunni Representation"
- IRQ_sunni_representation_desc: "We just need to represent the Sunni poppulation in our government and nation, not much else is needed."
+ IRQ_sunni_representation_desc: "We just need to represent the Sunni population in our government and nation, not much else is needed."
  IRQ_al_malikis_strings: "al-Malikis Strings"
  IRQ_al_malikis_strings_desc: "Maliki is a very weak figure, and can easily be swayed. We will use him to fulfill our ambitions and goals that could use a figure that is not a representative of our government."
  IRQ_walking_the_fine_line: "Walking the Fine Line"
@@ -560,7 +560,7 @@
  IRQ_the_regions_shield: "The Regions Shield"
  IRQ_the_regions_shield_desc: "We cannot be the tool of anyone, but rather we must make tools of everyone else. We will be the regions shield against all forms of foreign oppression."
  IRQ_extending_our_hand: "Extending Our Hand"
- IRQ_extending_our_hand_desc: "We must extand a hand to the many neglected nations in the region and bring them onto our side."
+ IRQ_extending_our_hand_desc: "We must extend a hand to the many neglected nations in the region and bring them onto our side."
  IRQ_formation_of_our_coalition: "Formation of our Coalition"
  IRQ_formation_of_our_coalition_desc: "We must form a coalition against the Zionists  occupying Palestine and it's people, the Israeli state must not be given free reign over the Palestinian people."
  IRQ_secure_lebanese_support: "Secure Lebanese Support"
@@ -568,7 +568,7 @@
  IRQ_syrian_backing: "Syrian Backing"
  IRQ_syrian_backing_desc: "The Syrians have got quite a bit of combat experience against the Israeli's, so we must take advantage of their expertise."
  IRQ_the_hazaras_in_afghanistan: "The Hazara's in Afghanistan"
- IRQ_the_hazaras_in_afghanistan_desc: "Our bid for regional hegemony cannot end at the Levant, it must go into central Asia and its dissilusioned people."
+ IRQ_the_hazaras_in_afghanistan_desc: "Our bid for regional hegemony cannot end at the Levant, it must go into central Asia and its disillusioned people."
  IRQ_the_alevis_in_turkey: "The Alevi's in Turkey"
  IRQ_the_alevis_in_turkey_desc: "Though few in numbers, the Alevi's can be a very useful ally in convincing the Turks they need a form of governance in their nation."
  IRQ_contact_palestinian_militias: "Contact Palestinian Militias"
@@ -596,7 +596,7 @@
  IRQ_form_the_pmf: "Align the PMF"
  IRQ_form_the_pmf_desc: "The PMF are currently an organization of several loosely aligned Militias. It is up to us to bring them into fold, and incorporate them into a larger part of the Iraqi army."
  IRQ_iranian_arms_companies: "Iranian Arms Companies"
- IRQ_iranian_arms_companies_desc: "The Iranians have been creating their own weapons domestically for deacdes now, and inviting them to set up shop in Iraq could give us some beneficial deals."
+ IRQ_iranian_arms_companies_desc: "The Iranians have been creating their own weapons domestically for decades now, and inviting them to set up shop in Iraq could give us some beneficial deals."
  IRQ_revive_iraqi_arms_industry: "Revive the Iraqi Arms Industry"
  IRQ_revive_iraqi_arms_industry_desc: "Doubling down on foreign companies is a suicidal idea, we must rely only on Iraqi produced weaponry, and Iraqi equipment only."
  IRQ_the_army_of_the_revolution: "The Army of The Revolution"
@@ -630,7 +630,7 @@
  IRQ_on_our_own: "On Our Own"
  IRQ_on_our_own_desc: "We need not the assistance of the foreigners to down the Iranian threat, we can do it all on our own."
  IRQ_arm_the_west: "Arm the West"
- IRQ_arm_the_west_desc: "The western parts of Iran is prodominantly filled with Kurds, and some Arabs in parts."
+ IRQ_arm_the_west_desc: "The western parts of Iran is predominantly filled with Kurds, and some Arabs in parts."
  IRQ_king_of_the_animal_kingdom: "Dethrone the King of the Jungle"
  IRQ_king_of_the_animal_kingdom_desc: "The time has come for the Iranians to finally get dislodged from their throne that they emit all chaos from."
  IRQ_arab_friends: "Arab Brothers?"
@@ -640,7 +640,7 @@
  IRQ_the_worth_of_the_people: "The Worth of The People"
  IRQ_the_worth_of_the_people_desc: "The Arab people in [SAU.GetName] must know their true worth, and we will ensure that they do so."
  IRQ_arab_worlds_leader: "Leader of the Arab World"
- IRQ_arab_worlds_leader_desc: "Through our policies, we will elevate ourselves to the top of the foodchain the Arab world. We will be seen as a leading figure in the Arab world!"
+ IRQ_arab_worlds_leader_desc: "Through our policies, we will elevate ourselves to the top of the food chain the Arab world. We will be seen as a leading figure in the Arab world!"
  IRQ_diplomacy_through_faith: "Diplomacy Through Faith"
  IRQ_diplomacy_through_faith_desc: "We must conduct diplomatic actions through our one common belief, Islam. The advantage our faith gives us cannot be undermined."
  IRQ_security_guarantees: "Security Guarantees"
@@ -693,7 +693,7 @@
  iraqi_events.8.b: "We don't need that."
 
  iraqi_events.9.t: "Iran Agrees!"
- iraqi_events.9.d: "Iran has agreed to join our new economic union that we have proposed, helping solidfy our economic influence on the region."
+ iraqi_events.9.d: "Iran has agreed to join our new economic union that we have proposed, helping solidify our economic influence on the region."
  iraqi_events.9.a: "Great"
 
  iraqi_events.10.t: "Iran Refuses!"
@@ -706,7 +706,7 @@
  iraqi_events.11.b: "Not interested."
 
  iraqi_events.12.t: "[FROM.GetName] refused!"
- iraqi_events.12.d: "[FROM.GetName] has decided that they are not intersted in our new economic union, and have publicly called out the union."
+ iraqi_events.12.d: "[FROM.GetName] has decided that they are not interested in our new economic union, and have publicly called out the union."
  iraqi_events.12.a: "They will regret this."
 
  iraqi_events.14.t: "You have been kicked out of the Union"
