--- a/localisation/english/MD_focus_CHE_l_english.yml
+++ b/localisation/english/MD_focus_CHE_l_english.yml
@@ -231,6 +231,8 @@
 
  CHE_raduevs_rise: "Raduyev's Communism"
  CHE_raduevs_rise_desc: "It seems that a specific form of communism awaits this country."
+ CHE_raduevs: "Special Communism"
+ CHE_raduevs_desc: "It seems that a specific form of communism awaits this country."
  CHE_ickeriyskie_pioneri: "Ichkerian Pioneers"
  CHE_ickeriyskie_pioneri_desc: "Pioneering was a great way to control young people, we will revive this past experience."
  CHE_reinvent_socialism: "And Again Propaganda"
@@ -254,6 +256,8 @@
 
  CHE_nationalist_dominance: "Further Into Nationalism"
  CHE_nationalist_dominance_desc: "We will continue our development vector."
+ CHE_nationalist: "Further Into Nationalism"
+ CHE_nationalist_desc: "We will continue our development vector."
  CHE_continue_methods: "Old Methods"
  CHE_continue_methods_desc: "We are not going to abandon the old methods of interaction with neighbors."
  CHE_find_antirussian_diplo: "Allies in Anti-Russian Views"
