--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1324,7 +1324,7 @@
  iraq_md.65.d: "The rebels in Rojava have contacted us, letting us know that they are ready for an assault on the Syrian government. We must give them the greenlight to move forward with their operation."
  iraq_md.65.a: "It's Time"
 
- iraq_md.66.t: "Iraq Pressures Us to Hold Electinos"
+ iraq_md.66.t: "Iraq Pressured Us to Hold Elections"
  iraq_md.66.d: "The Iraqi government is pressuring us to hold snap elections, especially as a recent leftist movement has seeped its influence deep into Kurdish society."
  iraq_md.66.a: "Okay, Fine"
  iraq_md.66.b: "No"
@@ -1333,7 +1333,7 @@
  iraq_md.67.d: "The Iraqi government has attacked our influence in many of the Gulf nations, creating anti-U.S. sentiment within their societies."
  iraq_md.67.a: "What the Hell?"
 
- iraq_md.68.t: "Iraq Arms Seperatist Groups in the West"
+ iraq_md.68.t: "Iraq Arms Separatist Groups in the West"
  iraq_md.68.d: "The Iraqi government has armed and trained a few groups that seek out the independence of their own states in the west of our nation, mainly some Kurdish groups and some in Khuzestan. Our troops must be ready to respond as soon as possible, and try to limit Iraqi influence where possible."
  iraq_md.68.a: "Okay"
 
@@ -1414,7 +1414,7 @@
  iraq_md.86.a: "Okay"
 
  iraq_md.87.t: "[IRQ.GetLeader] Orders Troops to Sack Local Markets"
- iraq_md.87.d: "[IRQ.GetLeader] has ordered his close contingence of troops to sack nearby markets, more specifically those who have been designated as suspicious by the government."
+ iraq_md.87.d: "[IRQ.GetLeader] has ordered his close contingent of troops to sack nearby markets, more specifically those who have been designated as suspicious by the government."
  iraq_md.87.a: "Okay.."
  iraq_md.87.b: "Not a Good Idea"
 
@@ -1494,9 +1494,9 @@
  IRQ_saddam_rage_idea: "[IRQ.GetLeader]'s Anger"
  IRQ_saddam_rage_idea_desc: "[IRQ.GetLeader] has a little difficulty controlling his rage, despite knowing it harms our nation in the long run..\n§W-----------------------------------------------------------------§!\nThis national spirit will be §Rremoved§! if §HSaddam Hussein§! or §HUday Hussein§! are not the leader of Iraq."
  IRQ_resisting_sanctions: "Resisting Sanctions"
- IRQ_resisting_sanctions_desc: "We have put an effor to combat the sanctions placed upon us."
- IRQ_resiliant_infrastructure: "Resiliant Infrastructure"
- IRQ_resiliant_infrastructure_desc: "Resiliant Infrastructure will save Iraq from accidents, ensuring our peoples safety."
+ IRQ_resisting_sanctions_desc: "We have put an effort to combat the sanctions placed upon us."
+ IRQ_resilient_infrastructure: "Resilient Infrastructure"
+ IRQ_resilient_infrastructure_desc: "Resilient Infrastructure will save Iraq from accidents, ensuring our peoples safety."
  IRQ_protected_oil_resources: "Protected Oil Reserves"
  IRQ_protected_oil_resources_desc: "We call rest well knowing that our oil is safe and sound."
  IRQ_increased_exports: "Increased Exports"
