--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1548,7 +1548,7 @@
  IRQ_empowering_shias: "Empowering Shias"
  IRQ_militia_reliance: "Reliance on Militias"
  IRQ_oil_auctions: "Oil Auctions"
- IRQ_palestinian_vengence: "Palestinian Vengence"
+ IRQ_palestinian_vengeance: "Palestinian Vengeance"
  IRQ_pmf_deployed: "PMF Deployed"
  IRQ_pmf_mobilizing: "PMF Mobilizing"
  IRQ_iranian_military_companies: "Iranian Military Industries"
