--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -354,7 +354,7 @@
  IRQ_integration_to_armed_forces: "Integration To Armed Forces"
  IRQ_integration_to_armed_forces_desc: "It is time that we integrate the IFR into the Iraqi army in order to cut back on costs, and push for better cooperation."
  IRQ_enforced_discipline: "Enforced Discipline"
- IRQ_enforced_discipline_desc: "We need to keep our troops in line in order to ensure that no one oversteps their boundries. This way we'll also have more polished and conditioned troops."
+ IRQ_enforced_discipline_desc: "We need to keep our troops in line in order to ensure that no one oversteps their boundaries. This way we'll also have more polished and conditioned troops."
  IRQ_exploit_american_presence: "Exploit American Presence"
  IRQ_exploit_american_presence_desc: "We cannot let the American presence in the nation go untapped, we must use their resources to our benefit."
  IRQ_mobilize_sadrs_forces: "Mobilize Sadrist Forces"
@@ -1567,7 +1567,7 @@
  IRQ_power_of_the_unions: "Power of The Unions"
  IRQ_al_hawasim: "Al Hawasim"
  IRQ_mahdi_army_expansion_idea: "Mahdi Army Expansion"
- IRQ_targetted_preperations: "Targetted Preperations"
+ IRQ_targetted_preparations: "Targetted Preparations"
  IRQ_untrustworthy_neighbors: "Untrustworthy Neighbors"
  IRQ_the_lions_den: "The Lions Den"
  IRQ_strategic_partnerships: "Strategic Partnerships"
