--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -75,17 +75,17 @@
  CMW_Leaving_The_Organisation_desc: "The decision to leave the Commonwealth marks a significant shift in international relations. This move reflects a strategic realignment of foreign policy, prioritizing national sovereignty and independence over traditional alliances. By exiting the Commonwealth, ROOT.GetFlag Root.GetName seeks to forge new partnerships and pursue a more autonomous path in global affairs."
  CMW_Charter: "Commonwealth Charter"
  CMW_Charter_desc: "The Commonwealth Charter is a document that outlines the shared values and principles of the Commonwealth of Nations, a group of 54 member states committed to human rights, sustainable development, and the rule of law."
- CMW_Minesterial_Action_Group: "Commonwealth Minesterial Action Group"
- CMW_Minesterial_Action_Group_desc: "The Commonwealth Ministerial Action Group is a body that comprises Commonwealth member country ministers, and it is responsible for addressing and taking action on issues related to governance, and political developments in member states to uphold Commonwealth values."
+ CMW_Ministerial_Action_Group: "Ministerial Action Group"
+ CMW_Ministerial_Action_Group_desc: "The Commonwealth Ministerial Action Group is a body that comprises Commonwealth member country ministers, and it is responsible for addressing and taking action on issues related to governance, and political developments in member states to uphold Commonwealth values."
  CMW_Kampala_Review: "Kampala Review"
  CMW_Kampala_Review_desc: "The Kampala Review, held during the Commonwealth Heads of Government Meeting in 2007, aimed to assess and enhance the effectiveness of the Commonwealth in promoting democracy, development, and good governance. This review focused on strengthening the organization's capacity to address contemporary global challenges, ensuring that its values and goals remain relevant and impactful for all member states."
  CMW_Anti_Corruption_Centre: "Commonwealth Africa Anti-Corruption Centre"
  CMW_Anti_Corruption_Centre_desc: "The Commonwealth Africa Anti-Corruption Centre is an institution established within the Commonwealth to address and combat corruption in African member countries, promoting transparency and good governance."
- CMW_Association_Legislative_Council: "Commonwealth Association Legislative Council"
+ CMW_Association_Legislative_Council: "Association Legislative Council"
  CMW_Association_Legislative_Council_desc: "The Commonwealth Association of Legislative Counsel is an organization that brings together legal professionals who provide counsel and support to legislatures and parliaments within the Commonwealth member states. It fosters collaboration and the sharing of expertise among legislative counsel."
- CMW_Protection_Of_Human_Rights: "Commonwealth Protection of Human Rights"
+ CMW_Protection_Of_Human_Rights: "Protection of Human Rights"
  CMW_Protection_Of_Human_Rights_desc: "The Commonwealth Protection of Human Rights initiative underscores the organization's commitment to upholding human rights across all member states. This focus emphasizes the implementation of robust legal frameworks and international standards to protect civil liberties, promote social justice, and ensure the dignity of all individuals."
- CMW_Parliament: "Parliament of the Commonwealth of Nations"
+ CMW_Parliament: "Parliament of the Commonwealth"
  CMW_Parliament_Desc: "The establishment of the Parliament of the Commonwealth of Nations represents a significant step towards greater political integration and cooperation among member states. This legislative body aims to facilitate dialogue, promote democratic values, and oversee the implementation of Commonwealth policies. It serves as a platform for representatives from all member countries to discuss and address shared challenges, fostering unity and collective action."
  CMW_Legal_Education_Association: "Commonwealth Legal Education Association"
  CMW_Legal_Education_Association_desc: "The Commonwealth Legal Education Association is an organization that promotes legal education and collaboration among Commonwealth member countries."
@@ -95,7 +95,7 @@
  CMW_Education_Framework_desc: "The Commonwealth Education Framework is a comprehensive system for guiding education policies and practices in Commonwealth member states."
  CMW_CFTC: "Commonwealth Fund for Technical Co-operation"
  CMW_CFTC_desc: "The Commonwealth Fund for Technical Co-operation (CFTC) is a financial mechanism that assists Commonwealth member countries in implementing technical cooperation projects and initiatives for development."
- CMW_School_Leaders: "Secretariat’s Professional Standards Framework for Teachers and School Leaders."
+ CMW_School_Leaders: "Secretariat’s Professional Standards"
  CMW_School_Leaders_desc: "The Secretariat's Professional Standards Framework for Teachers and School Leaders is a set of guidelines and benchmarks designed to enhance the professional development and performance of educators and school leaders within the Secretariat's jurisdiction."
  CMW_Trade_Association: "Commonwealth Trade Association"
  CMW_Trade_Association_desc: "The Commonwealth Trade Association (CTA) aims to enhance economic cooperation and trade relations among member states. By fostering a more integrated and collaborative trade environment, the CTA seeks to reduce tariffs, streamline customs procedures, and promote sustainable economic growth."
@@ -105,7 +105,7 @@
  CMW_Valuta_desc: "The introduction of the "Commo" marks a historic step towards economic integration within the Commonwealth of Nations. This common currency is designed to facilitate trade, enhance financial stability, and promote economic cooperation among member states. By adopting the Commo, the Commonwealth aims to reduce currency exchange barriers, stabilize regional economies, and foster a more unified economic community."
  CMW_Defense_Association: "Commonwealth Defense Association"
  CMW_Defense_Association_desc: "The establishment of the Commonwealth Defense Association (CDA) aims to strengthen collective security and defense cooperation among member states. This initiative focuses on joint military training exercises, intelligence sharing, and coordinated defense strategies to address common security threats. By fostering a unified defense framework, the Commonwealth seeks to enhance the safety and stability of its member nations."
- CMW_Counter_Insurgency_Training: "Commonwealth Counter-Insurgency Training"
+ CMW_Counter_Insurgency_Training: "Commonwealth Counter-Insurgency Day"
  CMW_Counter_Insurgency_Training_desc: "Commonwealth Counter-Insurgency Training is an initiative aimed at enhancing the capacity of Commonwealth member countries to effectively address and mitigate insurgent threats. It provides specialized training, resources, and expertise to assist nations in managing and responding to internal security challenges, thereby promoting stability and peace."
  CMW_Cyber_Declaration: "Commonwealth Cyber Declaration Programme"
  CMW_Cyber_Declaration_desc: "The Commonwealth Cyber Declaration Programme is an initiative focused on addressing cybersecurity issues and promoting cooperation in the Commonwealth member countries to enhance digital security and protect against cyber threats."
@@ -115,7 +115,7 @@
  CMW_Patrol_Boat_Program_desc: "The Commonwealth Patrol Boat Program is a strategic endeavor that involves the cooperative development and deployment of maritime patrol boats by Commonwealth member nations. These vessels are designed to enhance maritime security, protect territorial waters, and support various naval missions, thereby contributing to the safety and stability of Commonwealth regions."
  CMW_Chief_Of_Staff: "Commonwealth Chief of Staff"
  CMW_Chief_Of_Staff_desc: "The Commonwealth Chief of Staff is a high-ranking position responsible for overseeing and coordinating military operations and strategies within the Commonwealth member countries. This role plays a crucial part in ensuring the security and defense of the Commonwealth, as well as fostering cooperation and readiness among military forces to maintain peace and stability."
- CMW_Secretariat_CVE: "Commonwealth Secretariat Countering Violent Extremism Unit"
+ CMW_Secretariat_CVE: "Secretariat Countering Violent Extremism Unit"
  CMW_Secretariat_CVE_desc: "The Commonwealth Secretariat Countering Violent Extremism (CVE) Unit is a specialized section within the Commonwealth Secretariat responsible for addressing and countering violent extremism within Commonwealth member countries, with a focus on preventing radicalization and promoting peace and stability."
  CMW_Offices_For_Peace: "Commonwealth Offices for Peace"
  CMW_Offices_For_Peace_desc: "The establishment of the Commonwealth Offices for Peace (COP) underscores the Commonwealth's commitment to global peace and conflict resolution. These offices, located in key regions across the member states, work towards mediating conflicts, promoting diplomacy, and supporting peacebuilding initiatives."
