--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1567,7 +1567,7 @@
  IRQ_power_of_the_unions: "Power of The Unions"
  IRQ_al_hawasim: "Al Hawasim"
  IRQ_mahdi_army_expansion_idea: "Mahdi Army Expansion"
- IRQ_targetted_preparations: "Targetted Preparations"
+ IRQ_targeted_preparations: "Targeted Preparations"
  IRQ_untrustworthy_neighbors: "Untrustworthy Neighbors"
  IRQ_the_lions_den: "The Lions Den"
  IRQ_strategic_partnerships: "Strategic Partnerships"
@@ -1836,14 +1836,14 @@
  IRQ_islamic_spring_in_turkey_desc: "The time has come, our [TUR.GetFlag] Turkish partners are ready to bring about their Islamic Revolution!"
  IRQ_arm_rebels_in_afghanistan: "Arm Rebels in [AFG.GetFlag] Afghanistan"
  IRQ_arm_rebels_in_afghanistan_desc: "We can fund, train, and arm Shi'ites in [AFG.GetFlag] Afghanistan and prepare them to overthrow the [AFG.GetFlag] Afghan government inorder to install an Islamic Republic."
- IRQ_islamic_spring_in_afghanistan: "Islamic Spring in [AFG.GetFlag] Turkey"
+ IRQ_islamic_spring_in_afghanistan: "Islamic Spring in [AFG.GetFlag] Afghanistan"
  IRQ_islamic_spring_in_afghanistan_desc: "The time has come, our [AFG.GetFlag] Afghan partners are ready to bring about their Islamic Revolution!"
  IRQ_fao_decisions: "the Front Against Oppression"
  IRQ_fao_decisions_desc: "Having founded a new regional alliance, the §HFront Against Oppression§! (FAO) will contest any and all semblences of non-Islamic influence. We will be able to invite countries that are §HShi'ites§!, and we will be able to expand our network of potential FAO candidates by preparing the §HSpring of Islam§! plan."
  IRQ_ask_for_iranian_arms: "Request [PER.GetFlag] Iranian Armaments"
  IRQ_ask_for_iranian_arms_desc: "The [PER.GetFlag] Iranians hold large stockpiles of weapons that they will most likely never use, perhaps we could ask them to send over some of them for us to use."
  IRQ_ask_for_iranian_funds: "Request [PER.GetFlag] Iranian Funding"
- IRQ_ask_for_iranian_funds_desc: "We can request the PER.GetFlag] Iranians to fly over some pallets of cash in order to fund our development."
+ IRQ_ask_for_iranian_funds_desc: "We can request the [PER.GetFlag] Iranians to fly over some pallets of cash in order to fund our development."
  IRQ_open_invites: "Open Invites"
  IRQ_open_invites_desc: "We can view who is eligible to join our faction."
  IRQ_close_invites: "Close Invites"
