--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -72,7 +72,8 @@
  CMW_Hub_And_Spokes_Program: "Hub and Spokes Trade Programme"
  CMW_Hub_And_Spokes_Program_desc: "The Hub and Spokes Trade Programme is an initiative fostering trade partnerships between multiple countries, particularly focusing on capacity-building and trade-related development efforts."
  CMW_Leaving_The_Organisation: "Leaving The Commonwealth"
- CMW_Leaving_The_Organisation_desc: "The decision to leave the Commonwealth marks a significant shift in international relations. This move reflects a strategic realignment of foreign policy, prioritizing national sovereignty and independence over traditional alliances. By exiting the Commonwealth, ROOT.GetFlag Root.GetName seeks to forge new partnerships and pursue a more autonomous path in global affairs."
+ CMW_Leaving_The_Organisation_desc: "The decision to leave the Commonwealth marks a significant shift in international relations. This move reflects a strategic realignment of foreign policy, prioritizing national sovereignty and independence over traditional alliances. By exiting the Commonwealth, [ROOT.GetNamewithFlag] seeks to forge new partnerships and pursue a more autonomous path in global affairs."
+ CMW_Leaving_The_Organisation_tt: "[ROOT.GetNamewithFlag] removes §HCommonwealth Member§! "
  CMW_Charter: "Commonwealth Charter"
  CMW_Charter_desc: "The Commonwealth Charter is a document that outlines the shared values and principles of the Commonwealth of Nations, a group of 54 member states committed to human rights, sustainable development, and the rule of law."
  CMW_Ministerial_Action_Group: "Ministerial Action Group"
@@ -83,10 +84,11 @@
  CMW_Anti_Corruption_Centre_desc: "The Commonwealth Africa Anti-Corruption Centre is an institution established within the Commonwealth to address and combat corruption in African member countries, promoting transparency and good governance."
  CMW_Association_Legislative_Council: "Association Legislative Council"
  CMW_Association_Legislative_Council_desc: "The Commonwealth Association of Legislative Counsel is an organization that brings together legal professionals who provide counsel and support to legislatures and parliaments within the Commonwealth member states. It fosters collaboration and the sharing of expertise among legislative counsel."
- CMW_Protection_Of_Human_Rights: "Protection of Human Rights"
- CMW_Protection_Of_Human_Rights_desc: "The Commonwealth Protection of Human Rights initiative underscores the organization's commitment to upholding human rights across all member states. This focus emphasizes the implementation of robust legal frameworks and international standards to protect civil liberties, promote social justice, and ensure the dignity of all individuals."
+ CMW_Connectivity_Agenda: "Commonwealth Connectivity Agenda"
+ CMW_Connectivity_Agenda_desc: "The Commonwealth Connectivity Agenda is a platform for countries to exchange best practices and experiences to trade and investment and undertake domestic reform."
  CMW_Parliament: "Parliament of the Commonwealth"
  CMW_Parliament_Desc: "The establishment of the Parliament of the Commonwealth of Nations represents a significant step towards greater political integration and cooperation among member states. This legislative body aims to facilitate dialogue, promote democratic values, and oversee the implementation of Commonwealth policies. It serves as a platform for representatives from all member countries to discuss and address shared challenges, fostering unity and collective action."
+ CMW_Parliament_tt: "All member states of the §HCommonwealth of Nations§! allow elections to be held in their countries"
  CMW_Legal_Education_Association: "Commonwealth Legal Education Association"
  CMW_Legal_Education_Association_desc: "The Commonwealth Legal Education Association is an organization that promotes legal education and collaboration among Commonwealth member countries."
  CMW_Fintech_Toolkit: "Commonwealth Fintech Toolkit"
@@ -128,3 +130,9 @@
  CMW_New_CMW: "New Commonwealth of Nations"
  CMW_New_CMW_desc: "After a series of comprehensive reforms, the Commonwealth of Nations stands revitalized and prepared to face new global challenges. These reforms have modernized governance structures, streamlined decision-making processes, and reinforced the commitment to core values such as democracy, development, and human rights. The New Commonwealth is now poised to lead its member states into a new era of cooperation, inclusivity, and resilience, ready to tackle the complexities of the 21st century."
 
+
+ ##### Events #####
+ # Leaving CMW
+ CMW_Leaving.1.t: "[THIS.GetName] has leaves the Commonwealth of Nations"
+ CMW_Leaving.1.d: "[THIS.GetName] has officially announced its departure from the Commonwealth of Nations. This decision marks a significant shift in its foreign policy, reflecting a desire for greater autonomy and new international alliances. The departure may impact diplomatic relations and economic ties within the Commonwealth, presenting new challenges and opportunities for both the departing nation and remaining member states."
+ CMW_Leaving.1.a: "Good Luck"
