--- a/Changelog.txt
+++ b/Changelog.txt
@@ -22,6 +22,8 @@ v1.10.0
   - Added Difficulty Based AI to European Union to the AI
   - Improved AI for France so they should act more like France and not just chill in Europe
   - Fixed Special Forces Doctrines AI not properly taking SF doctrines
+  - After the expiration of a office the AI will wait two weeks to give some room for the player to take an office
+  - The AI will now move to a different EU law if they recently failed a law
 
  Balance:
   - Increased Strength losses in combat by (around 2 times greater), to make losses more realistic and decrease amount of 0 losses in combat
@@ -45,6 +47,7 @@ v1.10.0
   - Changed lethality in air combat to account for Air Wing size adjustment
   - Combined the naval techs for guns to streamline some MTG research (saves about a year, go figure ship go research)
   - Increased the amount of money earned from international market purchases
+  - Low/High Price Points for the market are now implemented. Low decreases the cost by 20%, and high increases by 20%
 
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
@@ -105,6 +108,7 @@ v1.10.0
   - Fixed Iranian units being deleted during the civil war
   - Fixed the Parliament no triggering correctly for Iran
   - Fixed a continuous event firing after the revolution for Iran
+  - Fixed the Deals with China/Deals with Russia focus in VEN having the opinion being inversed
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba, Free States of America, Iraq
