--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -22,14 +22,14 @@
  EU_no_active_budget_draft: "No Active Budget Draft"
  EU_approve_ipa: "Approve IPA"
  EU_no_ongoing_ipa: "No ongoing IPA"
- EU_any_current_eu_candiates: "Any Current EU Candiates"
+ EU_any_current_eu_candiates: "Any Current EU Candidates"
  EU_euroscepticism_status: "[ROOT.GetFlag] Euroscepticism : [?ROOT.eurosceptic|§%R1]"
  EU_europeanism_status: "[EUU.GetFlag] Europeanism: [?global.var_europeanism|§%G1]"
  EU_supporting: "Supporting:"
  EU_rejecting: "Rejecting:"
  EU_support: "Support"
  EU_reject: "Reject"
- EU_current_active_measure: "Current Active Measure"
+ EU_current_active_measure: "§YCurrent Active Measure§!"
  EU_country_rate_text: "[THIS.GetNameWithFlag] Rate"
  EU_global_rate_text: "Global Rate"
  EU_global_expenses_text: "Global Expenses"
@@ -305,7 +305,7 @@
  european_council_voting_members: "§GVoting Members§!"
  european_council_voting_members_tt: "The list of current members of §C[EUU.GetNameWithFlag]§! who may vote on new measures proposed to the European Council."
  european_council_header_tt: "Legal Acts of §C[EUU.GetNameWithFlag]§!\n--------------\nThe currently passed legal acts of the §C[EUU.GetNameWithFlag]§!.\n\nThe Council of the European Union operates on Qualified Majority Voting (QMV) commonly known as double majority. It requires 55% of the §CMember States§! and 65% §CMember States§! of the European Union Population."
- active_agenda_header: "Currently Active Agenda:"
+ active_agenda_header: "§YCurrently Active Agenda§!"
  list_of_available_laws_header: "§HAvailable European Union Reforms§!"
 
  # European Union SOTEU
