--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -1998,7 +1998,7 @@
  IRQ_usa_forget_the_war_TT: "Will prevent us from §Hconducting attacks§! against [IRQ.GetFlag] §HIraq§! in the future!"
  IRQ_will_give_america_grounds_for_war_TT: "Completion of this focus will give the [USA.GetFlag] §H[USA.GetName]§! grounds for §HWar§!!"
  IRQ_bahrain_coup_TT: "Will coup the [BHR.GetFlag] §H[BHR.GetAdjective] Government§! in Favor of the £IRQ_Nat_Autocracy_small §HNationalist Democratic Assembly§!"
- IRQ_we_need_more_than_50_TT: "We need §H50§! or more [SAU.GetFlag] §HAramco Control§! to do this decision. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0])§!"
+ IRQ_we_need_more_than_50_TT: "We need §H50§! or more [SAU.GetFlag] §HAramco Control§! to do this decision. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0]§!)"
  IRQ_aramco_med_chance_TT: "We will have a §HMedium§! chance at Seizing [SAU.GetFlag] §HAramco§!"
  IRQ_aramco_high_chance_TT: "We will have a §HHigh§! chance at Seizing [SAU.GetFlag] §HAramco§!"
  IRQ_aramco_guarantee_chance_TT: "We will have a §HGuaranteed§! chance at Seizing [SAU.GetFlag] §HAramco§!"
@@ -2025,7 +2025,7 @@
  IRQ_pro_saddam_baathist_uprising_jor_TT: "[IRQ.GetFlag] §HPro-Iraqi§! Factions within the [JOR.GetFlag] §HJordanian§! Ba'athist Party will Launch an §HUprising§!"
  IRQ_jordan_baath_decisions_TT: "£decision_icon_small §YUnlocks§! the [JOR.GetFlag] Jordan Ba'athist §YDecisions§!"
  IRQ_decrease_corruption_by_2_TT: "Will decrease §HCorruption§! by §H2§! levels"
- IRQ_qusay_as_heir_TT: "§HQusay Hussein§! will Succeed §!Saddam Hussein§! upon his death"
+ IRQ_qusay_as_heir_TT: "§HQusay Hussein§! will Succeed §HSaddam Hussein§! upon his death"
  IRQ_uday_as_heir_TT: "§HUday Hussein§! will Succeed §HSaddam Hussein§! upon his death"
  IRQ_MEK_uprising_TT: "§HUnlocks§! a decision to make the £PER_anarchist_communism §HMEK§! Revolt in [PER.GetFlag] Iran"
  IRQ_2_al_quds_brigade_TT: "Will recruit §H2 Al-Quds§! brigades from the §HPIJ§!"
@@ -2046,12 +2046,12 @@
  IRQ_small_success: "§HAnywhere Between§! §G200 - 800§! §HInsurgents were Killed§!"
  IRQ_small_failure: "§HAnywhere Between§! §R700 - 1.5K§! §Hof Our Troops were Killed!§!"
  IRQ_major_failure: "§HAnywhere Between§! §R2K - 3K§! §Hof Our Troops were Killed!§!"
- IRQ_major_defense_success: "§HAnywhere Between§! §700 - 1.5K§! §HInsurgents were Killed§!"
+ IRQ_major_defense_success: "§HAnywhere Between§! §G700 - 1.5K§! §HInsurgents were Killed§!"
  IRQ_small_defense_success: "§HAnywhere Between§! §G400 - 1.1K§! §HInsurgents were Killed§!"
  IRQ_small_defense_failure: "§HAnywhere Between§! §G100 - 900§! §HInsurgents were Killed§!, but we §RLost§! anywhere between §R500 - 2K§! Troops!"
  IRQ_major_defense_failure: "§HAnywhere Between§! §G200 - 1K§! §HInsurgents were Killed§!, but we §RLost§! anywhere between §R1K - 4K§! Troops!"
  IRQ_islamic_republic_chosen: "Will be an §HIslamic§! Government"
- IRQ_secular_republic_chosen: "Will be a §HSecular§! Party"
+ IRQ_secular_republic_chosen: "Will be a §HSecular§! Government"
  IRQ_arabic_language_chosen: "Will Prohibit §HEthnic Minority§! Languages"
  IRQ_multi_language_chosen: "Will Permit §HEthnic Minority§! Languages"
  IRQ_nationalism_forbidden_chosen: "Will Prohibit §HNationalistic§! Parties from Forming"
