Updated colors for EU

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ v1.10.0
   - Fixed Special Forces Doctrines AI not properly taking SF doctrines
   - After the expiration of a office the AI will wait two weeks to give some room for the player to take an office
   - The AI will now move to a different EU law if they recently failed a law
+  - AI will now try to push for the historical expansions of the EU on historical AI
 
  Balance:
   - Increased Strength losses in combat by (around 2 times greater), to make losses more realistic and decrease amount of 0 losses in combat
