--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -741,39 +741,39 @@
  troika_reforms_desc: "Reforms demanded by the so-called Troika of the European Commission (EC), the European Central Bank (ECB) and the International Monetary Fund (IMF) to prevent §Y[ROOT.GetNameWithFlag]§! from bankruptcy."
 
  EU_voting_mission_focus_EU101_QMV_result: "Charter of Fundamental Rights of the European Union Voting Result"
- EU_voting_mission_focus_EU101_QMV_result_desc: "The member states have voted on Charter of Fundamental Rights of the European Union. Time to show the result."
+ EU_voting_mission_focus_EU101_QMV_result_desc: "The member states have voted on the Charter of Fundamental Rights of the European Union. Time to show the result."
  EU_voting_mission_focus_EU102_QMV_result: "European Convention Voting Result"
- EU_voting_mission_focus_EU102_QMV_result_desc: "The member states have voted on European Convention. Time to show the result."
+ EU_voting_mission_focus_EU102_QMV_result_desc: "The member states have voted on the European Convention. Time to show the result."
  EU_voting_mission_focus_EU103_QMV_result: "European Constitution Voting Result"
- EU_voting_mission_focus_EU103_QMV_result_desc: "The member states have voted on European Constitution. Time to show the result."
+ EU_voting_mission_focus_EU103_QMV_result_desc: "The member states have voted on the European Constitution. Time to show the result."
  EU_voting_mission_focus_EU104_QMV_result: "Treaty of Lisbon Voting Result"
- EU_voting_mission_focus_EU104_QMV_result_desc: "The member states have voted on Treaty of Lisbon. Time to show the result."
+ EU_voting_mission_focus_EU104_QMV_result_desc: "The member states have voted on the Treaty of Lisbon. Time to show the result."
  EU_voting_mission_focus_EU105_QMV_result: "European External Action Service Voting Result"
  EU_voting_mission_focus_EU105_QMV_result_desc: "The member states have voted on European External Action Service. Time to show the result."
  EU_voting_mission_focus_EU201_QMV_result: "ECB Intervention Voting Result"
  EU_voting_mission_focus_EU201_QMV_result_desc: "The member states have voted on ECB Intervention. Time to show the result."
  EU_voting_mission_focus_EU202_QMV_result: "European Banking Union Voting Result"
- EU_voting_mission_focus_EU202_QMV_result_desc: "The member states have voted on European Banking Union. Time to show the result."
+ EU_voting_mission_focus_EU202_QMV_result_desc: "The member states have voted on the European Banking Union. Time to show the result."
  EU_voting_mission_focus_EU203_QMV_result: "Eurobonds Voting Result"
  EU_voting_mission_focus_EU203_QMV_result_desc: "The member states have voted on Eurobonds. Time to show the result."
  EU_voting_mission_focus_EU204_QMV_result: "European Financial Stability Facility (EFSF) Voting Result"
- EU_voting_mission_focus_EU204_QMV_result_desc: "The member states have voted on European Financial Stability Facility (EFSF). Time to show the result."
+ EU_voting_mission_focus_EU204_QMV_result_desc: "The member states have voted on the European Financial Stability Facility (EFSF). Time to show the result."
  EU_voting_mission_focus_EU205_QMV_result: "European Stability Mechanism (ESM) Voting Result"
- EU_voting_mission_focus_EU205_QMV_result_desc: "The member states have voted on European Stability Mechanism (ESM). Time to show the result."
+ EU_voting_mission_focus_EU205_QMV_result_desc: "The member states have voted on the European Stability Mechanism (ESM). Time to show the result."
  EU_voting_mission_focus_EU206_QMV_result: "Fiscal Union Voting Result"
  EU_voting_mission_focus_EU206_QMV_result_desc: "The member states have voted on Fiscal Union. Time to show the result."
  EU_voting_mission_focus_EU207_QMV_result: "European Economic Government Voting Result"
- EU_voting_mission_focus_EU207_QMV_result_desc: "The member states have voted on European Economic Government. Time to show the result."
+ EU_voting_mission_focus_EU207_QMV_result_desc: "The member states have voted on the European Economic Government. Time to show the result."
  EU_voting_mission_focus_EU208_QMV_result: "European Minister of Economy and Finance Voting Result"
- EU_voting_mission_focus_EU208_QMV_result_desc: "The member states have voted on European Minister of Economy and Finance. Time to show the result."
+ EU_voting_mission_focus_EU208_QMV_result_desc: "The member states have voted on the European Minister of Economy and Finance. Time to show the result."
  EU_voting_mission_focus_EU301_QMV_result: "European Defence Agency (EDA) Voting Result"
- EU_voting_mission_focus_EU301_QMV_result_desc: "The member states have voted on European Defence Agency (EDA). Time to show the result."
+ EU_voting_mission_focus_EU301_QMV_result_desc: "The member states have voted on the European Defence Agency (EDA). Time to show the result."
  EU_voting_mission_focus_EU302_QMV_result: "Permanent Structured Cooperation (PESCO) Voting Result"
  EU_voting_mission_focus_EU302_QMV_result_desc: "The member states have voted on Permanent Structured Cooperation (PESCO). Time to show the result."
  EU_voting_mission_focus_EU303_QMV_result: "European Defence Fund Voting Result"
- EU_voting_mission_focus_EU303_QMV_result_desc: "The member states have voted on European Defence Fund. Time to show the result."
+ EU_voting_mission_focus_EU303_QMV_result_desc: "The member states have voted on the European Defence Fund. Time to show the result."
  EU_voting_mission_focus_EU304_QMV_result: "European Security Council Voting Result"
- EU_voting_mission_focus_EU304_QMV_result_desc: "The member states have voted on European Security Council. Time to show the result."
+ EU_voting_mission_focus_EU304_QMV_result_desc: "The member states have voted on the European Security Council. Time to show the result."
  EU_voting_mission_focus_EU305_QMV_result: "EuroArmy Voting Result"
  EU_voting_mission_focus_EU305_QMV_result_desc: "The member states have voted on EuroArmy. Time to show the result."
  EU_voting_mission_focus_EU306_QMV_result: "EuroNavy Voting Result"
@@ -807,7 +807,7 @@
  EU_voting_mission_focus_EU703_QMV_result: "No Deal Exit Voting Result"
  EU_voting_mission_focus_EU703_QMV_result_desc: "The member states have voted on No Deal Exit. Time to show the result."
  EU_voting_mission_focus_EU110_QMV_result: "Federalisation of the European Union Voting Result"
- EU_voting_mission_focus_EU110_QMV_result_desc: "The member states have voted on Federalisation of the European Union. Time to show the result."
+ EU_voting_mission_focus_EU110_QMV_result_desc: "The member states have voted on the Federalisation of the European Union. Time to show the result."
  EU_voting_mission_focus_EU111_QMV_result: "United States of Europe Voting Result"
  EU_voting_mission_focus_EU111_QMV_result_desc: "The member states have voted on the United States of Europe. Time to show the result."
  EU_voting_mission_focus_EU112_QMV_result: "European Federation Voting Result"
@@ -817,11 +817,11 @@
  EU_voting_mission_focus_EU606_QMV_result: "Turkey Voting Result"
  EU_voting_mission_focus_EU606_QMV_result_desc: "The member states have voted on Turkey. Time to show the result."
  EU_voting_mission_focus_EU607_QMV_result: "Black Sea Enlargement Voting Result"
- EU_voting_mission_focus_EU607_QMV_result_desc: "The member states have voted on Black Sea Enlargement. Time to show the result."
+ EU_voting_mission_focus_EU607_QMV_result_desc: "The member states have voted on the Black Sea Enlargement. Time to show the result."
  EU_voting_mission_focus_EU608_QMV_result: "Caucasus Enlargement Voting Result"
- EU_voting_mission_focus_EU608_QMV_result_desc: "The member states have voted on Caucasus Enlargement. Time to show the result."
+ EU_voting_mission_focus_EU608_QMV_result_desc: "The member states have voted on the Caucasus Enlargement. Time to show the result."
  EU_voting_mission_focus_EU609_QMV_result: "European Economic Area Voting Result"
- EU_voting_mission_focus_EU609_QMV_result_desc: "The member states have voted on European Economic Area. Time to show the result."
+ EU_voting_mission_focus_EU609_QMV_result_desc: "The member states have voted on the European Economic Area. Time to show the result."
  EU_voting_mission_focus_EU610_QMV_result: "Belarus Voting Result"
  EU_voting_mission_focus_EU610_QMV_result_desc: "The member states have voted on Belarus. Time to show the result."
  EU_voting_mission_focus_EU611_QMV_result: "Internal Enlargement Voting Result"
