--- a/Changelog.txt
+++ b/Changelog.txt
@@ -109,6 +109,7 @@ v1.10.0
   - Fixed the Parliament no triggering correctly for Iran
   - Fixed a continuous event firing after the revolution for Iran
   - Fixed the Deals with China/Deals with Russia focus in VEN having the opinion being inversed
+  - Fixed a missing icon in the Syrian national spirits
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba, Free States of America, Iraq
