--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -2003,10 +2003,10 @@
  IRQ_aramco_high_chance_TT: "We will have a §HHigh§! chance at Seizing [SAU.GetFlag] §HAramco§!"
  IRQ_aramco_guarantee_chance_TT: "We will have a §HGuaranteed§! chance at Seizing [SAU.GetFlag] §HAramco§!"
  IRQ_stonks_TT: "By investing, we have a a chance to gain anywhere from §H1 - 3 control§! over [SAU.GetFlag] §HAramco§!. But we can also lose §H2 control§! over [SAU.GetFlag] §HAramco§!"
- IRQ_change_aramco_control_effect_1_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H1§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0])§!"
- IRQ_change_aramco_control_effect_2_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H2§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0])§!"
- IRQ_change_aramco_control_effect_3_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H3§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0])§!"
- IRQ_change_aramco_control_effect_4_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H-2§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0])§!"
+ IRQ_change_aramco_control_effect_1_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H1§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0]§!)"
+ IRQ_change_aramco_control_effect_2_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H2§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0]§!)"
+ IRQ_change_aramco_control_effect_3_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H3§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0]§!)"
+ IRQ_change_aramco_control_effect_4_TT: "Modifies [IRQ.GetAdjective] control over §YAramco§! by §H-2§!. (Current control of [SAU.GetFlag] §YAramco: [?IRQ_aramco_control|Y0]§!)"
  IRQ_aramco_control_10_TT: "Will increase [SAU.GetFlag] §HAramco Control§! by §H10§!"
  IRQ_aramco_lose_control_10_TT: "Will increase [SAU.GetFlag] §HAramco Control§! by §H-10§!"
  IRQ_oil_seizure_decisions_TT: "£decision_icon_small §YUnlocks§! Black Gold §YDecisions§!"
