--- a/Changelog.txt
+++ b/Changelog.txt
@@ -168,7 +168,7 @@ v1.10.0
   - Replaced the unit model for Russia
   - SOV Political Rework (Reworked parties and leaders for SOV. New parties for Russia's breakaway tags and dynamic parties for potential Federal Subjects of Russia)
   - Changed the order of the Chinese aircraft models to match the reality
-  - GFX Rework for USA and Russia
+  - GFX Rework for USA, Russia, Italy
   - Partial GFX Rework for France
   - Half a dozen new rifle models
   - More than 50 new plane models
